SLCORE-293 Stop exploding plugins if possible
We want to deprecate exploding of plugins. If plugins embeds libraries, we still have to extract them before loading plugins.
We will do so using the system temp folder, and use a shutdown hook to cleanup if possible.